hphp/hack/test/typecheck/coeffects/write_props/pure_lambda_inherited_error.php.exp
File "pure_lambda_inherited_error.php", line 13, characters 5-16:
Writing to object properties in a pure function is not allowed. (Parsing[1002])
File "pure_lambda_inherited_error.php", line 13, characters 5-12:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "pure_lambda_inherited_error.php", line 11, characters 33-34:
  The local (enclosing) context provides the capability set {}
