hphp/hack/test/typecheck/coeffects/write_props/pure_lambda_inherited_error.php
<?hh

class Foo {

  public function __construct(
    public int $prop,
   ) {}

}

function pure_lambda_inherited()[]: void {
  $f = (Foo $x) ==> {
    $x->prop = 4;
  };
}
